# hexlet_pytest

./: .gitignore  Makefile  pyproject.toml
hexlet_pytest/: example.py  generate_password.py  monkey_patching.py
hexlet_pytest/scripts/: main.py
tests/: test_example.py  test_stack.py
tests/test_data/: result_reverse.txt  reverse.txt
